--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "express": "^4.19.2",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "jwt-decode": "^4.0.0"
     }
 }
