--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,9 @@
 {
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
-        "jwt-decode": "^4.0.0"
+        "jwt-decode": "^4.0.0",
+        "multer": "^1.4.5-lts.1"
     }
 }
