--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "@prisma/client": "^5.17.0",
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
