--- a/server/package.json
+++ b/server/package.json
@@ -6,5 +6,8 @@
         "jsonwebtoken": "^9.0.2",
         "jwt-decode": "^4.0.0",
         "multer": "^1.4.5-lts.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
